--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,18 @@
+.App {
+    display: flex;
+    text-align: center;
+}
+
+.Logo {
+    display: inline;
+}
+
+.Header {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    padding: 0.5em 1em;
+    color: white;
+}
 
